Code cleanup (Java 17).